--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,31 @@
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+
+# Environment variables
+.env
 .env.local
-node_modules
-dist
-coverage
-.DS_Store
+.env.production
+
+
+# Logs
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+
+# OS
+.DS_Store
+/public/.DS_Store
+**/.DS_Store
+Thumbs.db
