phase 1 and 2 good

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
 # BetterOMS Environment Configuration
 # Copy this file to .env.local and fill in the values for your environment.
 
-# PostgreSQL connection string
-DATABASE_URL="postgres://USER:PASSWORD@HOST:PORT/DATABASE"
+# Database (Phase 2+)
+DATABASE_URL="postgresql://user:password@host:5432/betteroms"
 
-# Optional Polymarket credentials (Phase 3+)
+# Polymarket CLOB Configuration (Phase 1 - read-only, no auth required)
+CLOB_API_URL="https://clob.polymarket.com"
+CHAIN_ID="137"
+
+# Node Environment
+NODE_ENV="development"
+
+# Optional Polymarket credentials (Phase 3+ for live trading)
 POLYMARKET_API_KEY=""
 POLYMARKET_API_SECRET=""
