--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/cli/cli.ts",
-    "build": "tsc",
+    "build": "pnpm schema:generate && tsc",
     "start": "node dist/cli/cli.js",
     "betteroms": "tsx src/cli/cli.ts",
     "execute:trade-plan": "tsx src/cli/cli.ts execute:trade-plan",
@@ -13,7 +13,8 @@
     "test:database": "tsx src/test-database.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "schema:generate": "tsx scripts/generate-json-schema.ts"
   },
   "keywords": [
     "polymarket",
@@ -37,6 +38,7 @@
     "@types/node": "^22.10.2",
     "drizzle-kit": "^0.29.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "zod-to-json-schema": "^3.24.6"
   }
 }
